update rating, category